@@ -61,6 +61,83 @@ retrieved.")
 (defvar w3m-cache-unoptimized-gif-images-max-length 32
   "*Number to limit the length of `w3m-cache-unoptimized-gif-images'.")
 
+(defun w3m-unoptimize-animated-gif (url data no-cache)
+  "Return a glyph of an unoptimized animated gif data DATA corresponding
+to URL, which is suitable for XEmacs.  Otherwise it returns nil when
+there is no need to unoptimize (or, unfortunately, the unoptimization
+is failed).  It manages the cache `w3m-cache-unoptimized-gif-images'.
+If NO-CACHE is non-nil, a cached data will not be used and it will be
+updated by a new data."
+  (let ((cache (assoc url w3m-cache-unoptimized-gif-images)))
+    ;; Move the element which is associated with `url' to the
+    ;; top of the cache.  No need to use `equal' nor `delete'
+    ;; in the following procedures.
+    (when (and cache
+	       (not (eq cache (car w3m-cache-unoptimized-gif-images))))
+      (setq w3m-cache-unoptimized-gif-images
+	    (cons cache (delq cache w3m-cache-unoptimized-gif-images))))
+    (if (or no-cache
+	    (not cache))
+	(with-temp-buffer
+	  (let ((coding-system-for-read 'binary)
+		(coding-system-for-write 'binary)
+		should-unoptimize size1 size2 glyph)
+	    (insert data)
+	    (goto-char (point-min))
+	    (when (looking-at "GIF89a")
+	      ;; Check whether a `data' is animated.
+	      (call-process-region (point-min) (point-max)
+				   w3m-gifsicle-program
+				   t t nil "--info")
+	      (goto-char (point-min))
+	      (while (and (not should-unoptimize)
+			  (re-search-forward
+			   "  \\+ image #[0-9]+ \\([0-9]+x[0-9]+\\)"
+			   nil t))
+		(if size1
+		    (if (string-equal size1 (setq size2 (match-string 1)))
+			(setq size1 size2)
+		      (setq should-unoptimize t))
+		  (setq size1 (match-string 1))))
+	      (when should-unoptimize
+		(erase-buffer)
+		(insert data)
+		;; Unoptimize anyway.
+		(call-process-region (point-min) (point-max)
+				     w3m-gifsicle-program
+				     t t nil "--unoptimize")
+		(goto-char (point-min))
+		(when (or (looking-at "GIF89a")
+			  ;; Unoptimization is failed. :-<
+			  ;; Attempt to extract the first frame.
+			  (progn
+			    (erase-buffer)
+			    (insert data)
+			    (call-process-region (point-min) (point-max)
+						 w3m-gifsicle-program
+						 t t nil "#0")
+			    (goto-char (point-min))
+			    (looking-at "GIF89a")))
+		  ;; Perhaps the unoptimization is succeeded.
+		  (setq glyph (make-glyph (vector 'gif
+						  :data
+						  (buffer-string)))))))
+	    ;; Update a cache.
+	    (if cache
+		(setcdr cache glyph)
+	      (push (cons url glyph) w3m-cache-unoptimized-gif-images)
+	      (let ((maxlen w3m-cache-unoptimized-gif-images-max-length))
+		(when (and (integerp maxlen)
+			   (>= maxlen 1)
+			   (> (length w3m-cache-unoptimized-gif-images)
+			      maxlen))
+		  (setcdr (nthcdr (1- maxlen)
+				  w3m-cache-unoptimized-gif-images)
+			  nil))))
+	    glyph))
+      ;; Use a cached glyph.
+      (cdr cache))))
+
 (defun w3m-create-image (url &optional no-cache)
   "Retrieve data from URL and create an image object.
 If optional argument NO-CACHE is non-nil, cache is not used."
@@ -70,74 +147,11 @@ If optional argument NO-CACHE is non-nil, cache is not used."
 		 (message "While retrieving %s: %s" url err)
 		 nil))))
     (when (w3m-image-type-available-p (setq type (w3m-image-type type)))
-      (let ((data (w3m-with-work-buffer (buffer-string)))
-	    glyph)
-	(when (and (eq type 'gif)
-		   w3m-should-unoptimize-animated-gifs
-		   w3m-gifsicle-program)
-	  (let ((cache (assoc url w3m-cache-unoptimized-gif-images)))
-	    ;; Move the element which is associated with `url' to the
-	    ;; top of the cache.  No need to use `equal' nor `delete'
-	    ;; in the following procedures.
-	    (when (and cache
-		       (not (eq cache (car w3m-cache-unoptimized-gif-images))))
-	      (setq w3m-cache-unoptimized-gif-images
-		    (cons cache (delq cache
-				      w3m-cache-unoptimized-gif-images))))
-	    (cond
-	     ((or no-cache
-		  (not cache))
-	      (with-temp-buffer
-		(let ((coding-system-for-read 'binary)
-		      (coding-system-for-write 'binary))
-		  (insert data)
-		  (goto-char (point-min))
-		  (when (looking-at "GIF89a")
-		    ;; Check whether a `data' is animated.
-		    (call-process-region (point-min) (point-max)
-					 w3m-gifsicle-program
-					 t t nil "--info")
-		    (goto-char (point-min))
-		    (when (looking-at "\\*[\t ]+.+[\t ]+[0-9]+[\t ]+images")
-		      ;; gifsicle said that it is an animated gif.
-		      (erase-buffer)
-		      (insert data)
-		      ;; Unoptimize anyway.
-		      (call-process-region (point-min) (point-max)
-					   w3m-gifsicle-program
-					   t t nil "--unoptimize")
-		      (goto-char (point-min))
-		      (when (or (looking-at "GIF89a")
-				;; Unoptimization is failed. :-<
-				;; Attempt to extract the first frame.
-				(progn
-				  (erase-buffer)
-				  (insert data)
-				  (call-process-region (point-min) (point-max)
-						       w3m-gifsicle-program
-						       t t nil "#0")
-				  (goto-char (point-min))
-				  (looking-at "GIF89a")))
-			;; Perhaps the unoptimization is succeeded.
-			(setq glyph (make-glyph (vector 'gif
-							:data
-							(buffer-string))))))))
-		;; Update a cache.
-		(if cache
-		    (setcdr cache glyph)
-		  (push (cons url glyph) w3m-cache-unoptimized-gif-images)
-		  (let ((maxlen w3m-cache-unoptimized-gif-images-max-length))
-		    (when (and (integerp maxlen)
-			       (>= maxlen 1)
-			       (> (length w3m-cache-unoptimized-gif-images)
-				  maxlen))
-		      (setcdr (nthcdr (1- maxlen)
-				      w3m-cache-unoptimized-gif-images)
-			      nil))))))
-	     ((cdr cache)
-	      ;; Use a cached image.
-	      (setq glyph (cdr cache))))))
-	(or glyph
+      (let ((data (w3m-with-work-buffer (buffer-string))))
+	(or (and (eq type 'gif)
+		 w3m-should-unoptimize-animated-gifs
+		 w3m-gifsicle-program
+		 (w3m-unoptimize-animated-gif url data no-cache))
 	    (make-glyph (vector type :data data)))))))
 
 (defun w3m-insert-image (beg end image)
